syntax = "proto3";

package ministore;

service MiniService {
    rpc Status(StatusRequest) returns (StatusResponse) {};
    
    rpc Read(ReadRequest) returns (ReadResponse) {};
    rpc Write(WriteRequest) returns (WriteResponse) {};

    // Test interfaces
    rpc CreateFakeDevice(CreateFakeDeviceRequest) returns (CreateFakeDeviceResponse) {};
    rpc DeleteFakeDevice(DeleteFakeDeviceRequest) returns (DeleteFakeDeviceResponse) {};
    rpc ListFakeDevices(ListFakeDevicesRequest) returns (ListFakeDevicesResponse) {};
}

message StatusRequest {}
message StatusResponse {
    Status status = 1;
}

enum Status {
    NotReady = 0;
    Ready = 1;
}

message Data {
    repeated bytes data = 1; // Each data should be block size (4KB)
}

message ReadRequest {
    string name = 1;
    uint64 lba = 2;
    uint64 num_blocks = 3;
}

message ReadResponse {
    bool success = 1;
    optional Data data = 2;
    optional string reason = 3;
}

message WriteRequest {
    string name = 1;
    uint64 lba = 2;
    uint64 num_blocks = 3;
    Data data = 4;
}

message WriteResponse {
    bool success = 1;
    optional string reason = 2;
}

message CreateFakeDeviceRequest {
    string name = 1;
    uint64 size = 2;
};

message CreateFakeDeviceResponse {
    bool success = 1;
    optional string reason = 2;
};

message DeleteFakeDeviceRequest {
    string name = 1;
}

message DeleteFakeDeviceResponse {
    bool success = 1;
    optional string reason = 2;
}

message FakeDevice {
    string name = 1;
    uint64 size = 2;
}

message ListFakeDevicesRequest {}

message ListFakeDevicesResponse {
    bool success = 1;
    optional string reason = 2;
    repeated FakeDevice device_list = 3;
}